Fix scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    touch-action: none;
 }
 ol, ul {
     list-style: none;
